# esp-thermo

./: Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/device_logic/: ble.rs  heater_controller.rs
src/hardware_concierge/: bsp.rs  mod.rs  thermo_control.rs
