[package]
name = "thermo-esp"
version = "0.1.0"
authors = ["WJKPK <krupskiwojciech@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0", features = [ "embassy", "embassy-time-timg0"] }
esp-backtrace = { version = "0.9.0", features = ["panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["log"] }
log = "0.4.20"
esp-wifi  = { version = "0.1.1" }

#embedded-svc = { version = "0.25.0", default-features = false, features = [] }
#embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = ["macros"] }

embassy-executor = { version = "=0.3.2", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-sync = { version = "0.4.0", optional = true}
#embedded-hal-async = { version = "1.0.0-rc.1",  optional = true}
embassy-time = { version = "0.1.3", features = ["nightly"]  }

embassy-futures = { version = "0.1.0", optional = true }
embedded-io-async = { version = "0.6.0", optional = true }
static_cell = { version = "1.1", features = ["nightly"]}
byteorder = { version = "1.4.3", default-features = false }
fugit = { version = "0.3.7"}
portable-atomic = { version = "1.5", features = ["critical-section"] }

[features]
esp32c3 = ["embassy-executor/arch-riscv32", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-wifi/esp32c3"]
async = ["dep:embassy-sync", "esp-wifi/async", "bleps/async", "hal/async"]
ble = ["esp-wifi/ble"]

